# ai-assistant

./: .gitignore  README.md  gui.py  main.py  pyproject.toml
llm_integration/: main.py
speech_module/: main.py  pyproject.toml
speech_recognition/: main.py  pyproject.toml
wikipedia_search/: main.py
