[project]
name = "ai-assistant"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "autopep8>=2.3.2",
    "flet>=0.28.3",
    "flet-cli>=0.28.3",
    "flet-desktop>=0.28.3",
    "flet-web>=0.28.3",
    "openai>=1.97.1",
    "pyaudio>=0.2.14",
    "requests>=2.32.4",
    "vosk>=0.3.45",
    "wikipedia>=1.4.0",
]
